# observable-inference-gateway

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyrightconfig.json
gateway/: .dockerignore  Dockerfile  main.py  pyproject.toml
model_service/: .env  Dockerfile  main.py  metrics.py  pyproject.toml
model_service/legacy_prometheus_telemetry/: auto_metrics_inference_gateway.py
