[project]
name = "inference-stack"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "structlog>=26.1.0",
]
