[project]
name = "inference-stack"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx[cli]>=0.28.1",
    "ollama>=0.6.2",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "rich>=13.9.4",
    "structlog>=26.1.0",
]
