[project]
name = "inference-stack"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx[cli]>=0.28.1",
    "ollama>=0.6.2",
    "opentelemetry-distro>=0.63b1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "rich>=13.9.4",
    "structlog>=26.1.0",
]
